# ChangeLog for dev-java/eclipse-ecj
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.14 2006/12/07 22:33:24 flameeyes Exp $

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> eclipse-ecj-3.2.ebuild:
  Add ~x86-fbsd keyword.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild, eclipse-ecj-3.2.ebuild:
  ppc stable. bug #147254

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild, eclipse-ecj-3.2.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Jackson <tsunam@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild, eclipse-ecj-3.2.ebuild:
  New java stable on x86; bug #147254

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> metadata.xml,
  eclipse-ecj-3.1-r2.ebuild, eclipse-ecj-3.1-r13.ebuild,
  eclipse-ecj-3.2.ebuild:
  Added ~ppc64. Moved SRC_URI to Gentoo mirrors. Other minor whitespace cleanups.

*eclipse-ecj-3.2 (10 Aug 2006)

  10 Aug 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/compiler-settings-3.2, +files/eclipse-ecj-3.2-build-gentoo.patch,
  +eclipse-ecj-3.2.ebuild:
  Version bump, thanks to Caster.

  07 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild:
  Added classpath.

  22 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild:
  Added ~ppc, bug #105223

  25 Jun 2006; <nichoj@gentoo.org> +files/compiler-settings-3.1:
  Revision bump to add support for new Java system.

  10 Mar 2006; Markus Rothe <corsair@gentoo.org> eclipse-ecj-3.1-r2.ebuild:
  Added ~ppc64; bug #125715

  24 Dec 2005; Thomas Matthijs <axxo@gentoo.org> -eclipse-ecj-3.1.ebuild:
  remove

  18 Dec 2005; Joshua Nichols <nichoj@gentoo.org> eclipse-ecj-3.1-r2.ebuild:
  Added ~amd64 keyword.

*eclipse-ecj-3.1-r2 (04 Sep 2005)

  04 Sep 2005; Karl Trygve Kalleberg <karltk@gentoo.org>
  +eclipse-ecj-3.1-r2.ebuild: