@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/servletapi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/servletapi/ChangeLog,v 1.45 2006/10/05 17:14:27 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/servletapi/ChangeLog,v 1.46 2006/12/09 09:37:33 flameeyes Exp $
+
+  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
+  servletapi-2.2-r3.ebuild:
+  Add ~x86-fbsd keyword.
 
   05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   servletapi-2.2-r2.ebuild, servletapi-2.2-r3.ebuild,
