@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/eclipse-ecj
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.14 2006/12/07 22:33:24 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.15 2006/12/09 09:36:43 flameeyes Exp $
+
+  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
+  eclipse-ecj-3.1-r13.ebuild:
+  Add ~x86-fbsd keyword.
 
   07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> eclipse-ecj-3.2.ebuild:
   Add ~x86-fbsd keyword.
